--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -2,13 +2,13 @@
 .btn {
     cursor: pointer;
     padding: 15px 30px;
-    background-color: $primary;
+    background-color: var(--main-primary-color);
     border: 0;
     color: white;
     text-decoration: none;
-    margin: $margin-sm;
-    border-radius: $border-radius;
-    box-shadow: $box-shadow;
+    margin: var(--margin-sm);
+    border-radius: var(--border-radius);
+    box-shadow: var(--box-shadow);
     &:hover{
         opacity: .8;
     }
@@ -16,35 +16,5 @@
 }
 // Button Link 
 .btn-primary {
-    background-color: $primary;
-}
-.btn-success {
-    background-color: $success;
-}
-.btn-danger {
-    background-color: $danger;
-}
-.btn-info {
-    background-color: $info;
-}
-.btn-warning {
-    background-color: $warning;
-    color: black;
-}
-.btn-secondary {
-    background-color: $secondary;
-}
-.btn-dark {
-    background-color: $dark;
-}
-.btn-light {
-    background-color: $light;
-    color: black;
-}
-
-// Standard Icons
-.standard-icon {
-    width: 2em;
-    height: 2em;
-    margin-right: 1em;
+    background-color: var(--main-primary-color);
 }
