--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -7,7 +7,7 @@
     color: white;
     text-decoration: none;
     margin: var(--margin-sm);
-    border-radius: var(--border-radius);
+    border-radius: 2em;
     box-shadow: var(--box-shadow);
     &:hover{
         opacity: .8;
