--- a/scss/critical.css
+++ b/scss/critical.css
@@ -1,6 +1,6 @@
 @media (min-width: 0em) {
   #landing {
-    height: 100vh;
+    height: 730px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -11,6 +11,118 @@
         -ms-flex-align: center;
             align-items: center;
     background-color: var(--light-gray);
+    position: relative;
+  }
+  #landing .content {
+    color: white;
+    z-index: 10;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    width: 100%;
+    max-width: 650px;
+    margin: auto 0;
+    padding: var(--padding-md);
+  }
+  #landing .content h1 {
+    font-size: 2em;
+    margin-bottom: var(--margin-md);
+    line-height: 1.1;
+  }
+  #landing .content p {
+    margin-bottom: var(--margin-md);
+    font-size: 1em;
+    line-height: 1.5;
+  }
+  #landing .content .btns {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  #landing .content .btns a {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  #landing .content .btns a:nth-child(1) {
+    border: 2px solid white;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-size: 1em;
+    background-color: transparent;
+    color: white;
+  }
+  #landing .content .btns a:nth-child(2) {
+    background-color: white;
+    color: var(--main-primary-color);
+  }
+  #landing picture {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    -o-object-fit: cover;
+       object-fit: cover;
+    z-index: -11;
+  }
+  #landing picture img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  #landing .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    -o-object-fit: cover;
+       object-fit: cover;
+    background-color: black;
+    opacity: 40%;
+  }
+}
+
+@media (min-width: 768px) {
+  #landing {
+    min-height: 900px;
+  }
+}
+
+@media (min-width: 1024px) {
+  #landing {
+    min-height: 768px;
   }
 }
 /*# sourceMappingURL=critical.css.map */
