--- a/scss/critical.scss
+++ b/scss/critical.scss
@@ -1,10 +1,160 @@
-@media (min-width: 0em){
+@media (min-width: 0em) {
+
     // All sections will have an id
     #landing {
-        height: 100vh;
+        height: 730px;
         display: flex;
         justify-content: center;
         align-items: center;
         background-color: var(--light-gray);
-    } 
+        position: relative;
+
+        .content {
+            color: white;
+            z-index: 10;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+            width: 100%;
+            max-width: 650px;
+            // margin-top: 45%;
+            margin: auto 0;
+            padding: var(--padding-md);
+
+            h1 {
+                font-size: 2em;
+                margin-bottom: var(--margin-md);
+                line-height: 1.1;
+            }
+
+            p {
+                margin-bottom: var(--margin-md);
+                font-size: 1em;
+                line-height: 1.5;
+            }
+
+            .btns {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-wrap: wrap;
+
+                a {
+                    box-shadow: none;
+                }
+
+                a:nth-child(1) {
+                    border: 2px solid white;
+                    position: relative;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 1em;
+                    background-color: transparent;
+                    color: white;
+                }
+
+                a:nth-child(2) {
+                    background-color: white;
+                    color: var(--main-primary-color);
+                }
+            }
+        }
+
+        picture {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            object-fit: cover;
+            z-index: -11;
+
+            img {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                object-fit: cover;
+            }
+        }
+
+        .overlay {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            object-fit: cover;
+            background-color: black;
+            opacity: 40%;
+        }
+    }
+}
+
+@media (min-width: 768px) {
+
+    // All sections will have an id
+    #landing {
+        min-height: 900px;
+
+        .content {
+
+
+            h1 {}
+
+            p {}
+
+            .btns {
+
+
+
+                a:nth-child(1) {}
+
+                a:nth-child(2) {}
+            }
+        }
+
+        picture {
+
+            img {}
+        }
+
+        .overlay {}
+    }
+}
+
+@media (min-width: 1024px) {
+
+    // All sections will have an id
+    #landing {
+        min-height: 768px;
+
+        .content {
+
+
+            h1 {}
+
+            p {}
+
+            .btns {
+
+
+
+                a:nth-child(1) {}
+
+                a:nth-child(2) {}
+            }
+        }
+
+        picture {
+
+            img {}
+        }
+
+        .overlay {}
+    }
 }
