--- a/scss/layout/_header1.scss
+++ b/scss/layout/_header1.scss
@@ -1,44 +1,34 @@
-/** @format */
-
 @media (min-width: 0px) {
   body {
     overflow-x: hidden;
-    // position: relative;
-  }
-.body-fixed {
-  overflow: hidden;
-}
-  main {
     position: relative;
   }
-  // X
+
   .hamburger {
-    z-index: 9999;
+    z-index: 50;
   }
 
   header {
     position: absolute;
-    // X
-    z-index: 9999;
+    z-index: 50;
     width: 100vw;
 
     &.is-active {
       box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
-      // x
-      z-index: 9999;
+      z-index: 50;
     }
 
     & nav {
+      position: relative;
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-end;
+      align-items: center;
       background-color: transparent;
       box-shadow: none;
       border: 0;
-      padding: 1em;
-      max-width: 55em;
+      padding: 1.2em;
       width: 100%;
-      height: 5em;
-      position: relative;
+      min-height: 75px;
 
       & p {
         color: black;
@@ -46,17 +36,18 @@
       }
 
       .logo-wrapper {
+        position: absolute;
+        left: 1rem;
+        top: 1rem;
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100%;
-        width: max-content;
+        width: 30%;
+        max-width: 200px;
 
         img {
-          width: auto;
+          max-width: 100%;
           height: 100%;
-          max-width: 250px;
-          z-index: 2;
         }
       }
 
@@ -74,9 +65,10 @@
         align-items: flex-end;
         transform: translateX(100%);
         transition: all 0.3s ease-in-out;
-        background-color: var(--light-blk);
+        background-color: #18191a;
         list-style: none;
-        padding: 2em;
+        padding: 2rem;
+
         & li {
           opacity: 1;
           padding: 0.5em 1em;
@@ -85,28 +77,43 @@
           display: flex;
           justify-content: center;
           align-items: center;
-          font-size: 22px;
+          font-size: 1.3em;
           position: relative;
           text-transform: uppercase;
+          overflow: hidden;
 
           & a {
             color: white;
             text-decoration: none;
           }
 
-          &:hover {
-            cursor: pointer;
+          &::after {
+            content: "";
+            width: 100%;
+            height: 2px;
+            background-color: var(--main-primary-color);
+            bottom: 0;
+            position: absolute;
+            transform: translateX(-101%);
+          }
 
+          &:hover {
             &::after {
-              position: absolute;
-              width: 95%;
-              height: 2px;
-              bottom: -2px;
-              content: "";
-              background-color: white;
-              z-index: 2;
+              transition: transform 0.5s;
+              transform: translate(0);
             }
           }
+
+          &.active {
+            &::after {
+              transition: transform 0.5s;
+              transform: translate(0);
+            }
+          }
+        }
+
+        & li:nth-child(1) {
+          margin-top: -3em;
         }
 
         &.is-active {
@@ -115,8 +122,8 @@
 
         .social-media {
           position: absolute;
-          left: 1em;
-          top: 50vh;
+          left: 1rem;
+          top: 45%;
           padding: 0;
           display: flex;
           justify-content: center;
@@ -124,34 +131,15 @@
           flex-direction: column;
 
           img {
-            width: 1.5em;
-            height: 1.5em;
+            width: 1.5rem;
+            margin-bottom: var(--margin-md);
           }
         }
       }
 
-      .mobile-flex {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      #nav-cta {
-        // display: none;
-        text-decoration: none;
-        background-color: white;
-        border-radius: 2em;
-        padding: 8px 20px;
-        color: #222;
-        margin-right: 1em;
-        font-size: 0.8em;
-        z-index: 2;
-      }
-
-      .desktop-flex {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+      .nav-btn {
+        display: none;
+        box-shadow: none;
       }
     }
 
@@ -160,32 +148,15 @@
       top: 0;
       left: 0;
       right: 0;
-      // width: 100vw;
+      width: 100vw;
       height: 100vh;
       transform: translateX(100%);
-      background: rgba(0, 0, 0, 0.7);
+      background: rgba(0, 0, 0, 0.6);
       z-index: 99;
 
       &.is-active {
         transform: translate(0%);
         animation: fadeIn 0.3s ease-in;
-      }
-    }
-
-    // fixed state
-    &.scroll-fixed {
-      transition: all 1s;
-      background-color: var(--light-blk);
-      position: fixed;
-      animation: fadeInDown .5s forwards ease-in;
-
-      nav {
-        height: 4em;
-        padding: 1em;
-
-        .logo-wrapper {
-          img {}
-        }
       }
     }
   }
@@ -201,61 +172,16 @@
   }
 }
 
-@media (min-width: 600px) {
-  header {
-    nav {
-      .nav-links {}
-
-      .logo-wrapper {
-        img {
-          width: unset;
-        }
-      }
-    }
-  }
-}
-
 @media (min-width: 768px) {
   header {
-    z-index: 9999;
     & nav {
-      height: 7em;
-      padding: 1em;
+      height: 10vh;
+      padding: 0.5em;
       width: 100%;
 
       .nav-links {
-        width: 50%;
-        height: 100vh;
-
         li {
-          // font-size: $font-size-base * 1.5;
-        }
-      }
-
-      .logo-wrapper {
-
-        img {
-          width: 100%;
-          height: 100%;
-        }
-      }
-     
-    }
-    &.is-active {
-      z-index: 9999;
-    }
-    &.scroll-fixed {
-      transition: background-color 1s;
-      background-color: var(--light-blk);
-      position: fixed;
-
-      nav {
-        height: 5em;
-        padding: 1em;
-        flex-wrap: inherit;
-
-        .logo-wrapper {
-          img {}
+          font-size: var(--font-sz-sm);
         }
       }
     }
@@ -263,6 +189,10 @@
 }
 
 @media (min-width: 1024px) {
+  .body-fixed {
+    position: unset !important;
+  }
+
   .hamburger {
     display: none !important;
     box-shadow: none;
@@ -271,40 +201,35 @@
   header {
     z-index: 5;
     position: absolute;
-    z-index: 1000;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 6rem;
     width: 100vw;
 
     & .is-active {
-      box-shadow: none;
+      box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
       z-index: 100;
     }
 
     & nav {
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-end;
       align-items: center;
       background-color: transparent;
       box-shadow: none;
-      padding: 1em;
+      padding: 0 1em;
       width: 100%;
       height: 100%;
+      max-width: 1200px;
       margin: auto;
       position: relative;
 
       .logo-wrapper {
-        position: relative;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        top: unset;
-        left: unset;
+        width: 16%;
+        // max-width: 275px;
 
-        img {
-          width: 200px;
-        }
+        img {}
       }
 
       .nav-links {
@@ -322,22 +247,16 @@
         background-color: transparent;
         list-style: none;
         width: auto;
-        padding: 1em;
 
         & li {
           opacity: 1;
-          padding: 0em;
+          padding: 0.5em;
           width: max-content;
           font-size: var(--font-sz-sm);
-
-          a {
-            padding: 0.5em;
-          }
         }
 
         & li:nth-child(1) {
           margin-top: 0em;
-          border-bottom: none;
         }
 
         .social-media {
@@ -345,24 +264,9 @@
         }
       }
 
-      #nav-cta {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: unset;
-        padding: 0.6em 1.5em;
-        font-size: 0.875em;
-        margin-right: 0;
-        transition: all 0.5s;
-        white-space: nowrap;
-
-        &:hover,
-        &:active {
-          transform: translateY(-5px);
-          box-shadow: var(--box-shadow);
-          transition: all 0.5s;
-        }
-      }
+      // .nav-btn {
+      //   display: block;
+      // }
     }
 
     .navlinks-overlay {
@@ -375,49 +279,48 @@
   header {
     z-index: 5;
     position: absolute;
-    z-index: 1000;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 7em;
+    height: 10rem;
     width: 100vw;
 
     & .is-active {
+      box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
       z-index: 100;
     }
 
     & nav {
       justify-content: space-between;
-      // padding: 0;
+      padding: 0;
 
       .logo-wrapper {
-        left: unset;
-        top: unset;
         position: relative;
+        width: 45%;
 
-        img {
-          width: 12em;
-        }
+        img {}
       }
 
       .nav-links {
+        display: grid;
+        grid-template-columns: repeat(5, auto);
+        grid-gap: 0.5rem;
+        place-items: center;
+
         & li {}
       }
-    }
 
-    &.scroll-fixed {
-      transition: background-color 1s;
-      position: fixed;
-      height: unset;
+      .nav-btn {
+        display: block;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
-      nav {
-        height: 5em;
-        padding: 1em;
-
-        .logo-wrapper {
-          img {
-            width: auto;
-          }
+        img {
+          width: 1.2rem;
+          position: absolute;
+          right: 0.5rem;
         }
       }
     }
@@ -475,20 +378,5 @@
         transform: rotate(45deg) translate(0px, 0px);
       }
     }
-  }
-}
-
-// animate 
-@keyframes fadeInDown {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0)
-  }
-
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none
   }
 }
