--- a/scss/main.css
+++ b/scss/main.css
@@ -45,52 +45,51 @@ body {
   }
 }
 
-/** @format */
 @media (min-width: 0px) {
   body {
     overflow-x: hidden;
-  }
-  .body-fixed {
-    overflow: hidden;
-  }
-  main {
     position: relative;
   }
   .hamburger {
-    z-index: 9999;
+    z-index: 50;
   }
   header {
     position: absolute;
-    z-index: 9999;
+    z-index: 50;
     width: 100vw;
   }
   header.is-active {
     -webkit-box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
             box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
-    z-index: 9999;
+    z-index: 50;
   }
   header nav {
+    position: relative;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     background-color: transparent;
     -webkit-box-shadow: none;
             box-shadow: none;
     border: 0;
-    padding: 1em;
-    max-width: 55em;
+    padding: 1.2em;
     width: 100%;
-    height: 5em;
-    position: relative;
+    min-height: 75px;
   }
   header nav p {
     color: black;
     font-size: 1.2em;
   }
   header nav .logo-wrapper {
+    position: absolute;
+    left: 1rem;
+    top: 1rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -100,16 +99,12 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    height: 100%;
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
+    width: 30%;
+    max-width: 200px;
   }
   header nav .logo-wrapper img {
-    width: auto;
+    max-width: 100%;
     height: 100%;
-    max-width: 250px;
-    z-index: 2;
   }
   header nav .nav-links {
     margin: 0;
@@ -136,9 +131,9 @@ body {
             transform: translateX(100%);
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    background-color: var(--light-blk);
+    background-color: #18191a;
     list-style: none;
-    padding: 2em;
+    padding: 2rem;
   }
   header nav .nav-links li {
     opacity: 1;
@@ -154,25 +149,43 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    font-size: 22px;
+    font-size: 1.3em;
     position: relative;
     text-transform: uppercase;
+    overflow: hidden;
   }
   header nav .nav-links li a {
     color: white;
     text-decoration: none;
   }
-  header nav .nav-links li:hover {
-    cursor: pointer;
+  header nav .nav-links li::after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: var(--main-primary-color);
+    bottom: 0;
+    position: absolute;
+    -webkit-transform: translateX(-101%);
+            transform: translateX(-101%);
   }
   header nav .nav-links li:hover::after {
-    position: absolute;
-    width: 95%;
-    height: 2px;
-    bottom: -2px;
-    content: "";
-    background-color: white;
-    z-index: 2;
+    -webkit-transition: -webkit-transform 0.5s;
+    transition: -webkit-transform 0.5s;
+    transition: transform 0.5s;
+    transition: transform 0.5s, -webkit-transform 0.5s;
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+  header nav .nav-links li.active::after {
+    -webkit-transition: -webkit-transform 0.5s;
+    transition: -webkit-transform 0.5s;
+    transition: transform 0.5s;
+    transition: transform 0.5s, -webkit-transform 0.5s;
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+  header nav .nav-links li:nth-child(1) {
+    margin-top: -3em;
   }
   header nav .nav-links.is-active {
     -webkit-transform: translate(0%);
@@ -180,8 +193,8 @@ body {
   }
   header nav .nav-links .social-media {
     position: absolute;
-    left: 1em;
-    top: 50vh;
+    left: 1rem;
+    top: 45%;
     padding: 0;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -198,50 +211,24 @@ body {
             flex-direction: column;
   }
   header nav .nav-links .social-media img {
-    width: 1.5em;
-    height: 1.5em;
+    width: 1.5rem;
+    margin-bottom: var(--margin-md);
   }
-  header nav .mobile-flex {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  header nav #nav-cta {
-    text-decoration: none;
-    background-color: white;
-    border-radius: 2em;
-    padding: 8px 20px;
-    color: #222;
-    margin-right: 1em;
-    font-size: 0.8em;
-    z-index: 2;
-  }
-  header nav .desktop-flex {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+  header nav .nav-btn {
+    display: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
   }
   header .navlinks-overlay {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    width: 100vw;
     height: 100vh;
     -webkit-transform: translateX(100%);
             transform: translateX(100%);
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.6);
     z-index: 99;
   }
   header .navlinks-overlay.is-active {
@@ -249,18 +236,6 @@ body {
             transform: translate(0%);
     -webkit-animation: fadeIn 0.3s ease-in;
             animation: fadeIn 0.3s ease-in;
-  }
-  header.scroll-fixed {
-    -webkit-transition: all 1s;
-    transition: all 1s;
-    background-color: var(--light-blk);
-    position: fixed;
-    -webkit-animation: fadeInDown .5s forwards ease-in;
-            animation: fadeInDown .5s forwards ease-in;
-  }
-  header.scroll-fixed nav {
-    height: 4em;
-    padding: 1em;
   }
   @-webkit-keyframes fadeIn {
     from {
@@ -280,47 +255,21 @@ body {
   }
 }
 
-@media (min-width: 600px) {
-  header nav .logo-wrapper img {
-    width: unset;
-  }
-}
-
 @media (min-width: 768px) {
-  header {
-    z-index: 9999;
-  }
   header nav {
-    height: 7em;
-    padding: 1em;
+    height: 10vh;
+    padding: 0.5em;
     width: 100%;
   }
-  header nav .nav-links {
-    width: 50%;
-    height: 100vh;
-  }
-  header nav .logo-wrapper img {
-    width: 100%;
-    height: 100%;
-  }
-  header.is-active {
-    z-index: 9999;
-  }
-  header.scroll-fixed {
-    -webkit-transition: background-color 1s;
-    transition: background-color 1s;
-    background-color: var(--light-blk);
-    position: fixed;
-  }
-  header.scroll-fixed nav {
-    height: 5em;
-    padding: 1em;
-    -ms-flex-wrap: inherit;
-        flex-wrap: inherit;
+  header nav .nav-links li {
+    font-size: var(--font-sz-sm);
   }
 }
 
 @media (min-width: 1024px) {
+  .body-fixed {
+    position: unset !important;
+  }
   .hamburger {
     display: none !important;
     -webkit-box-shadow: none;
@@ -329,7 +278,6 @@ body {
   header {
     z-index: 5;
     position: absolute;
-    z-index: 1000;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -339,48 +287,36 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    height: 6rem;
     width: 100vw;
   }
   header .is-active {
-    -webkit-box-shadow: none;
-            box-shadow: none;
+    -webkit-box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+            box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
     z-index: 100;
   }
   header nav {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
     background-color: transparent;
     -webkit-box-shadow: none;
             box-shadow: none;
-    padding: 1em;
+    padding: 0 1em;
     width: 100%;
     height: 100%;
+    max-width: 1200px;
     margin: auto;
     position: relative;
   }
   header nav .logo-wrapper {
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    top: unset;
-    left: unset;
-  }
-  header nav .logo-wrapper img {
-    width: 200px;
+    width: 16%;
   }
   header nav .nav-links {
     margin: 0;
@@ -408,51 +344,20 @@ body {
     background-color: transparent;
     list-style: none;
     width: auto;
-    padding: 1em;
   }
   header nav .nav-links li {
     opacity: 1;
-    padding: 0em;
+    padding: 0.5em;
     width: -webkit-max-content;
     width: -moz-max-content;
     width: max-content;
     font-size: var(--font-sz-sm);
   }
-  header nav .nav-links li a {
-    padding: 0.5em;
-  }
   header nav .nav-links li:nth-child(1) {
     margin-top: 0em;
-    border-bottom: none;
   }
   header nav .nav-links .social-media {
     display: none;
-  }
-  header nav #nav-cta {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    font-size: unset;
-    padding: 0.6em 1.5em;
-    font-size: 0.875em;
-    margin-right: 0;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
-    white-space: nowrap;
-  }
-  header nav #nav-cta:hover, header nav #nav-cta:active {
-    -webkit-transform: translateY(-5px);
-            transform: translateY(-5px);
-    -webkit-box-shadow: var(--box-shadow);
-            box-shadow: var(--box-shadow);
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
   }
   header .navlinks-overlay {
     display: none;
@@ -463,7 +368,6 @@ body {
   header {
     z-index: 5;
     position: absolute;
-    z-index: 1000;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -473,37 +377,49 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    height: 7em;
+    height: 10rem;
     width: 100vw;
   }
   header .is-active {
+    -webkit-box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+            box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
     z-index: 100;
   }
   header nav {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    padding: 0;
   }
   header nav .logo-wrapper {
-    left: unset;
-    top: unset;
     position: relative;
+    width: 45%;
   }
-  header nav .logo-wrapper img {
-    width: 12em;
+  header nav .nav-links {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (auto)[5];
+        grid-template-columns: repeat(5, auto);
+    grid-gap: 0.5rem;
+    place-items: center;
   }
-  header.scroll-fixed {
-    -webkit-transition: background-color 1s;
-    transition: background-color 1s;
-    position: fixed;
-    height: unset;
+  header nav .nav-btn {
+    display: block;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
-  header.scroll-fixed nav {
-    height: 5em;
-    padding: 1em;
-  }
-  header.scroll-fixed nav .logo-wrapper img {
-    width: auto;
+  header nav .nav-btn img {
+    width: 1.2rem;
+    position: absolute;
+    right: 0.5rem;
   }
 }
 
@@ -566,32 +482,6 @@ body {
 .hamburger.is-active .hamburger-inner::after {
   -webkit-transform: rotate(45deg) translate(0px, 0px);
           transform: rotate(45deg) translate(0px, 0px);
-}
-
-@-webkit-keyframes fadeInDown {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-@keyframes fadeInDown {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
 }
 
 @media (min-width: 0em) {
@@ -800,7 +690,7 @@ body {
   color: white;
   text-decoration: none;
   margin: var(--margin-sm);
-  border-radius: var(--border-radius);
+  border-radius: 2em;
   -webkit-box-shadow: var(--box-shadow);
           box-shadow: var(--box-shadow);
 }
