--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,3 +1,136 @@
-@media (min-width: 0em){
+@media (min-width: 0em) {
+    .landing-overlap {
+        width: 100%;
+        max-width: 1200px;
+        margin: auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 1em;
+        place-items: center;
+        background-color: white;
+        padding: 0 1em;
+        z-index: 2;
+        margin-top: -5em;
 
+        .card {
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            flex-direction: column;
+            width: 100%;
+            max-width: 300px;
+            box-shadow: var(--box-shadow);
+
+            .head {
+                position: relative;
+                width: 100%;
+                height: 10em;
+
+                picture {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    left: 0;
+                    top: 0;
+                    object-fit: cover;
+
+                    img {
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                        left: 0;
+                        top: 0;
+                        object-fit: cover;
+                    }
+                }
+            }
+
+            .body {
+                padding: 1em;
+
+                h3 {
+                    margin-bottom: var(--margin-md);
+                }
+
+                p {
+                    line-height: 1.5;
+                    margin-bottom: var(--margin-md);
+                    font-size: var(--font-sz-sm);
+                }
+
+                a {
+                    color: var(--main-primary-color);
+                    text-decoration: none;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: max-content;
+
+                    p {
+                        width: max-content;
+                        margin: 0;
+                    }
+
+                    img {
+                        margin-left: var(--margin-sm);
+                    }
+                }
+            }
+        }
+    }
+}
+@media (min-width: 768px) {
+    .landing-overlap {
+        width: 100%;
+        max-width: 1000px;
+        margin: auto;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 1em;
+        place-items: center;
+        background-color: white;
+        padding: 0 1em;
+        z-index: 2;
+        margin-top: -5em;
+
+        .card {
+            max-width: unset;
+
+            .head {
+
+                picture {
+
+
+                    img {
+
+                    }
+                }
+            }
+
+            .body {
+
+
+                h3 {
+
+                }
+
+                p {
+
+                    
+                }
+
+                a {
+
+
+                    p {
+
+                    }
+
+                    img {
+
+                    }
+                }
+            }
+        }
+    }
 }
