--- a/scss/main.css
+++ b/scss/main.css
@@ -829,43 +829,41 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-bottom: 3em;
   }
-  #intro .container .graphics picture {
+  #intro .container .graphics .pos {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 90%;
-    max-width: 360px;
+    max-width: 400px;
     height: 450px;
     position: relative;
   }
-  #intro .container .graphics picture img {
+  #intro .container .graphics .pos img {
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
-    -o-object-fit: cover;
-       object-fit: cover;
     position: absolute;
   }
-  #intro .container .graphics picture.abs {
-    width: 90%;
-    max-width: 360px;
-    position: absolute;
-    left: 0;
-    top: -2em;
-  }
-  #intro .container .graphics picture.abs img {
+  #intro .container .graphics .pos img.abs {
     width: 100%;
     height: 100%;
-    top: 0;
-    left: 0;
-    -o-object-fit: cover;
-       object-fit: cover;
+    top: -1em;
+    left: -1em;
     position: absolute;
   }
   #intro .container .content {
@@ -951,21 +949,17 @@ body {
     max-width: 1200px;
     display: -ms-grid;
     display: grid;
+    place-items: start;
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
     grid-gap: 1em;
     padding-top: 5em;
   }
   #intro .container .graphics {
+    margin: 0;
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
-  }
-  #intro .container .graphics picture {
-    top: 2em;
-  }
-  #intro .container .graphics picture.abs {
-    top: 1em;
   }
 }
 
@@ -975,6 +969,45 @@ body {
   }
   .landing-overlap .card {
     max-width: unset;
+  }
+  #intro {
+    width: 100%;
+  }
+  #intro .container {
+    place-items: start;
+    -ms-grid-columns: 45% 55%;
+        grid-template-columns: 45% 55%;
+    grid-gap: 0em;
+    padding-top: 5em;
+  }
+  #intro .container .graphics {
+    margin: 0;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
+@media (min-width: 1200px) {
+  #intro {
+    width: 100%;
+  }
+  #intro .container {
+    -ms-grid-columns: 40% 60%;
+        grid-template-columns: 40% 60%;
+  }
+  #intro .container .graphics {
+    margin: 0;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  #intro .container .graphics .pos {
+    width: 80%;
+  }
+  #intro .container .graphics .pos img.abs {
+    left: -2em;
+    top: -2em;
   }
 }
 /*# sourceMappingURL=main.css.map */
