--- a/scss/main.css
+++ b/scss/main.css
@@ -773,7 +773,7 @@ body {
   .landing-overlap .card .body p {
     line-height: 1.5;
     margin-bottom: var(--margin-md);
-    font-size: .9em;
+    font-size: 0.9em;
   }
   .landing-overlap .card .body a {
     color: var(--main-primary-color);
@@ -883,7 +883,7 @@ body {
   }
   #intro .container .content span {
     color: var(--main-primary-color);
-    margin-bottom: .2em;
+    margin-bottom: 0.2em;
   }
   #intro .container .content h2 {
     margin-bottom: var(--margin-sm);
@@ -926,7 +926,189 @@ body {
     font-size: 1em;
     background-color: transparent;
     color: var(--main-primary-color);
-    margin-left: .5em;
+    margin-left: 0.5em;
+  }
+  #home-services {
+    width: 100%;
+    padding: var(--padding-xl) var(--padding-md);
+    background-color: #dfece0;
+  }
+  #home-services .heading {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    margin-bottom: 3em;
+  }
+  #home-services .heading h2 {
+    font-size: 2em;
+  }
+  #home-services .heading span {
+    color: var(--main-primary-color);
+  }
+  #home-services .container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    grid-gap: 1em;
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+  }
+  #home-services .container .card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    background-color: white;
+    border-radius: 2em;
+    padding: 1em;
+    position: relative;
+    z-index: 1;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+  }
+  #home-services .container .card > img {
+    width: 3em;
+    height: 3em;
+  }
+  #home-services .container .card > div {
+    padding: .5em 0em 1em 1em;
+  }
+  #home-services .container .card > div h3 {
+    margin-bottom: 1em;
+  }
+  #home-services .container .card > div p {
+    line-height: 1.5;
+    font-size: 0.9em;
+    margin-bottom: 1em;
+  }
+  #home-services .container .card > div a {
+    color: var(--main-primary-color);
+    text-decoration: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+  }
+  #home-services .container .card > div a p {
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+    margin: 0;
+  }
+  #home-services .container .card > div a img {
+    margin-left: var(--margin-sm);
+  }
+  #home-services .container .card .hover-img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6))), url(/assets/img04m.webp) center/cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(/assets/img04m.webp) center/cover;
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+    opacity: 0;
+    visibility: hidden;
+    border-radius: 2em;
+  }
+  #home-services .container .card:hover .hover-img {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+    visibility: visible;
+  }
+  #home-services .container .card:hover p,
+  #home-services .container .card:hover h3 {
+    color: white;
+  }
+  #home-services .container .card:hover a img {
+    -webkit-filter: invert(100%);
+            filter: invert(100%);
+  }
+  #small-contact {
+    background: url(/assets/img05M.webp) center/cover;
+    padding: var(--padding-xl) var(--padding-md);
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+  }
+  #small-contact .heading {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    z-index: 2;
+  }
+  #small-contact .heading h2 {
+    font-size: 1.5em;
+    color: white;
+    max-width: 600px;
+    margin-bottom: 1em;
+  }
+  #small-contact .heading a {
+    position: relative;
+    z-index: 2;
+    background-color: white;
+    color: black;
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+  }
+  #small-contact .overlay {
+    width: 100%;
+    height: 100%;
+    background-color: var(--main-primary-color);
+    top: 0;
+    left: 0;
+    position: absolute;
+    opacity: 90%;
   }
 }
 
@@ -961,6 +1143,13 @@ body {
         -ms-flex-align: start;
             align-items: flex-start;
   }
+  #home-services .container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    grid-gap: 1em;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -986,6 +1175,36 @@ body {
         -ms-flex-align: start;
             align-items: flex-start;
   }
+  #home-services .container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    grid-gap: 1em;
+  }
+  #home-services .container .card {
+    padding: 1.5em;
+  }
+  #small-contact .heading {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    max-width: 1000px;
+  }
+  #small-contact .heading h2 {
+    margin-bottom: 0;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -1008,6 +1227,16 @@ body {
   #intro .container .graphics .pos img.abs {
     left: -2em;
     top: -2em;
+  }
+  #home-services {
+    padding-bottom: 10em;
+  }
+  #small-contact {
+    margin-top: -5em;
+    border-radius: 1em;
+  }
+  #small-contact .overlay {
+    border-radius: 1em;
   }
 }
 /*# sourceMappingURL=main.css.map */
