--- a/scss/main.css
+++ b/scss/main.css
@@ -1100,6 +1100,7 @@ body {
     width: -webkit-max-content;
     width: -moz-max-content;
     width: max-content;
+    margin: 0;
   }
   #small-contact .overlay {
     width: 100%;
@@ -1109,6 +1110,98 @@ body {
     left: 0;
     position: absolute;
     opacity: 90%;
+  }
+  #why {
+    padding: var(--padding-xl) var(--padding-md);
+    width: 100%;
+  }
+  #why .container {
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+  }
+  #why .container .heading {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin-bottom: 2em;
+  }
+  #why .container .heading span {
+    color: var(--main-primary-color);
+  }
+  #why .container .heading h2 {
+    font-size: 2em;
+    margin-bottom: .4em;
+  }
+  #why .container .heading p {
+    line-height: 1.5;
+  }
+  #why .container .cards {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    grid-gap: 1em;
+  }
+  #why .container .cards .card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-shadow: var(--box-shadow);
+            box-shadow: var(--box-shadow);
+    padding: 1em;
+    max-width: 450px;
+    background-color: white;
+    text-align: center;
+  }
+  #why .container .cards .card .circle {
+    background-color: var(--main-primary-color);
+    padding: 1em;
+    margin-bottom: .5em;
+    border-radius: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+  }
+  #why .container .cards .card .circle img {
+    width: 3em;
+    height: 3em;
+  }
+  #why .container .cards .card h3 {
+    font-size: 1.5em;
+    margin-bottom: .3em;
+  }
+  #why .container .cards .card p {
+    line-height: 1.5;
+  }
+  #why .container .graphic {
+    display: none;
+    visibility: hidden;
   }
 }
 
@@ -1149,6 +1242,10 @@ body {
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
     grid-gap: 1em;
+  }
+  #why .container .cards {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
   }
 }
 
@@ -1205,6 +1302,56 @@ body {
   #small-contact .heading h2 {
     margin-bottom: 0;
   }
+  #why .container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    grid-gap: 5em;
+    position: relative;
+  }
+  #why .container .heading {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  #why .container .cards {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    position: absolute;
+    bottom: 1em;
+    z-index: 2;
+    max-width: 850px;
+  }
+  #why .container .cards .card {
+    max-width: 400px;
+  }
+  #why .container .graphic {
+    display: block;
+    visibility: visible;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+    width: 450px;
+    height: 650px;
+    z-index: 1;
+  }
+  #why .container .graphic img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -1237,6 +1384,44 @@ body {
   }
   #small-contact .overlay {
     border-radius: 1em;
+  }
+  #why .container .cards {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    position: absolute;
+    bottom: 1em;
+    z-index: 2;
+    max-width: 900px;
+  }
+  #why .container .cards .card {
+    max-width: 400px;
+  }
+  #why .container .graphic {
+    display: block;
+    visibility: visible;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+    width: 450px;
+    height: 650px;
+    z-index: 1;
+    justify-self: flex-end;
+  }
+  #why .container .graphic img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 /*# sourceMappingURL=main.css.map */
