--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -428,6 +428,62 @@
             }
         }
     }
+
+    #home-gallery {
+        width: 100%;
+        padding: var(--padding-xl) var(--padding-md);
+        background-color: #F6FAF7;
+
+        .heading {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+            margin-bottom: 3em;
+
+            h2 {
+                font-size: 2em;
+            }
+
+            span {
+                // font-size: .8em;
+                color: var(--main-primary-color);
+            }
+        }
+
+        .grid {
+            width: 100%;
+            max-width: 1200px;
+            margin: auto;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-gap: 1em;
+
+            .item {
+                position: relative;
+                width: 100%;
+                height: 250px;
+
+                picture {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+
+                    img {
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                        top: 0;
+                        left: 0;
+                        object-fit: cover;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media (min-width: 768px) {
@@ -566,6 +622,31 @@
             .graphic {
 
                 img {}
+            }
+        }
+    }
+
+    #home-gallery {
+
+
+        .heading {
+
+
+            h2 {}
+
+            span {}
+        }
+
+        .grid {
+            grid-template-columns: 1fr 1fr;
+
+            .item {
+
+                picture {
+
+
+                    img {}
+                }
             }
         }
     }
@@ -747,6 +828,31 @@
             }
         }
     }
+
+    #home-gallery {
+
+
+        .heading {
+
+
+            h2 {}
+
+            span {}
+        }
+
+        .grid {
+            grid-template-columns: 1fr 1fr 1fr;
+
+            .item {
+
+                picture {
+
+
+                    img {}
+                }
+            }
+        }
+    }
 }
 
 @media (min-width: 1200px) {
@@ -822,6 +928,7 @@
     #small-contact {
         margin-top: -5em;
         border-radius: 1em;
+        background-attachment: fixed;
 
         .heading {
 
@@ -859,6 +966,7 @@
 
                 .card {
                     max-width: 400px;
+                    transition: all .5s;
 
                     .circle {
 
@@ -869,6 +977,10 @@
                     h3 {}
 
                     p {}
+
+                    &:hover {
+                        transform: translateY(-10px);
+                    }
                 }
             }
 
